; ModuleID = '/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_install_client_side.c'
source_filename = "/home/carl/AnghaBench/systemd/src/systemctl/extr_systemctl.c_install_client_side.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_root = common dso_local global i32 0, align 4
@arg_scope = common dso_local global i64 0, align 8
@UNIT_FILE_GLOBAL = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"SYSTEMCTL_INSTALL_CLIENT_SIDE\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @install_client_side to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @install_client_side() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @running_in_chroot_or_offline()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %24

5:                                                ; preds = %0
  %6 = call i64 (...) @sd_booted()
  %7 = icmp sle i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  store i32 1, i32* %1, align 4
  br label %24

9:                                                ; preds = %5
  %10 = load i32, i32* @arg_root, align 4
  %11 = call i32 @isempty(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  store i32 1, i32* %1, align 4
  br label %24

14:                                               ; preds = %9
  %15 = load i64, i64* @arg_scope, align 8
  %16 = load i64, i64* @UNIT_FILE_GLOBAL, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 1, i32* %1, align 4
  br label %24

19:                                               ; preds = %14
  %20 = call i64 @getenv_bool(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %21 = icmp sgt i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %19
  store i32 1, i32* %1, align 4
  br label %24

23:                                               ; preds = %19
  store i32 0, i32* %1, align 4
  br label %24

24:                                               ; preds = %23, %22, %18, %13, %8, %4
  %25 = load i32, i32* %1, align 4
  ret i32 %25
}

declare dso_local i64 @running_in_chroot_or_offline(...) #1

declare dso_local i64 @sd_booted(...) #1

declare dso_local i32 @isempty(i32) #1

declare dso_local i64 @getenv_bool(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
